# bench-win-ipc

./: .build-win.sh  .gitignore  Cargo.toml  README.md
bench-common/: Cargo.toml
bench-common/src/: lib.rs
bench-named-pipe/: Cargo.toml
bench-named-pipe/src/: main.rs
bench-tcp/: Cargo.toml
bench-tcp/src/: main.rs
