[package]
name    = "bench-tcp"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true
debug = false
rpath = false
opt-level = 2
incremental   = false
codegen-units = 1
debug-assertions = false

[dependencies]
common = { path = "../bench-common" }
tokio  = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util", "time"] }

